# cpp-mono

./: CMakeLists.txt  Readme.MD
cmake/: CheckCompilerSupported.cmake  UseCodeCoverage.cmake  UseSanitizer.cmake
src/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt  main.cpp
src/apps/automation-engine/: CMakeLists.txt
src/apps/automation-engine/assets/scripts/: block.lua  strength.lua
src/apps/automation-engine/src/: App.cpp  App.h  main.cpp
src/apps/automation-engine/src/components/: TextLabelComponent.h
src/apps/automation-engine/src/events/: CollisionEvent.h  KeyPressedEvent.h
src/apps/automation-engine/src/services/: AppState.h  Lua.h  LuaState.h
src/apps/automation-engine/src/structs/: DetectColorsArguments.h  ErodeDilateArguments.h  Target.h
src/apps/automation-engine/src/systems/: CollisionSystem.h  DetectionSystem.h  KeyboardControlSystem.h  PlayerDecisionSystem.h  RenderBoundingBoxSystem.h  RenderScreenSystem.h  ScreenSystem.h  ScriptSystem.h
src/apps/first-cpp-mono/: CMakeLists.txt
src/apps/first-cpp-mono/src/: App.cpp  App.h  main.cpp
src/apps/first-cpp-mono/src/components/: TextLabelComponent.h
src/apps/first-cpp-mono/src/systems/: KeyboardControlSystem.h  RenderTextSystem.h
src/apps/pong/: CMakeLists.txt
src/apps/pong-ecs/: CMakeLists.txt
src/apps/pong-ecs/src/: App.cpp  App.h
src/apps/pong-ecs/src/components/: BoundingBoxComponent.h  BoxColliderComponent.h  KeyboardControlledComponent.h  RigidBodyComponent.h
src/apps/pong-ecs/src/systems/: CollisionSystem.h  KeyboardControlSystem.h  MovementSystem.h  RenderRigidBodiesSystem.h  RenderTextSystem.h
src/apps/pong/src/: App.cpp  App.h
src/apps/pong/src/entities/: GameObject.h
src/core/: CMakeLists.txt  EventManager.h  Loop.cpp  Loop.h  Loop.structs.h  Renderer.h  Tick.cpp  Time.cpp  Time.h
src/core-sdl-implement/: EventManager.implement.cpp  EventManager.implement.h  EventManagerImplement.cpp  EventManagerImplement.h  Renderer.implement.cpp  Renderer.implement.h  RendererImplement.cpp  RendererImplement.h  Tick.implement.h  TimeImplement.cpp  TimeImplement.h
src/core/test/: CMakeLists.txt
src/event-bus/: CMakeLists.txt  Event.h  EventBus.cpp  EventBus.h
src/implements/: CMakeLists.txt
src/implements/core-sdl/: CMakeLists.txt  EventManager.implement.h  Renderer.implement.h  Tick.implement.cpp  Tick.implement.h
src/libs/shared/: CMakeLists.txt
src/libs/shared/src/components/: BoundingBoxComponent.h  TextLabelComponent.h
src/libs/shared/src/systems/: RenderTextSystem.cpp  RenderTextSystem.h
src/loop/: Loop.cpp  Loop.h
src/modules/: CMakeLists.txt
src/modules/core/: CMakeLists.txt  Tick.h
src/modules/event-bus/: EventBus.h
src/modules/events/: Bus.h  CMakeLists.txt
src/modules/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/modules/loop/: CMakeLists.txt  Core.cpp  Core.h  Core.structs.h  EventManager.cpp  EventManager.h  Loop.cpp  Loop.h  Loop.structs.h  Renderer.h  Tick.h
src/modules/loop-sdl/: CMakeLists.txt  EventManager.implement.cpp  EventManager.implement.h  Renderer.implement.cpp  Renderer.implement.h  Tick.implement.cpp  Tick.implement.h
src/modules/loop/test/: CMakeLists.txt
