add_subdirectory(apps/automation-engine)
add_subdirectory(apps/pong)
add_subdirectory(apps/pong-ecs)

add_subdirectory(packages/asset-store-sdl)
add_subdirectory(packages/devices)
add_subdirectory(packages/devices-sdl)
add_subdirectory(packages/ecs)
add_subdirectory(packages/events)
add_subdirectory(packages/logger)
add_subdirectory(packages/loop)
add_subdirectory(packages/loop-sdl)
